--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,23 +12,17 @@ jobs:
     steps:
       - uses: docker/setup-buildx-action@v2
 
-      - uses: docker/login-action@v2
-        with:
-          registry: "ghcr.io"
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - uses: docker/metadata-action@v4
         id: meta
         with:
-          images: "ghcr.io/condensedtea/helm"
+          images: "ghcr.io/${{ github.repository_owner }}/helm-github-action"
           tags: |
             ${{ github.sha }}
             latest
 
       - uses: actions/checkout@v3
 
-      - uses: docker/build-push-action@v3
+      - uses: docker/build-push-action@v4
         with:
           context: .
           push: true
